--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -42,7 +42,7 @@
     {% if c.userobj %}
     <li><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.dcxml" class="btn"><i class="fa fa-icon fa-link"></i>{{ _(' DataCite XML')}}</a></li>
     {% endif %}
-    {% if h.helper_available('structured_data') %}
+    {% if h.cioos_helper_available('structured_data') %}
     <li><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.xml" class="btn"><i class="fa fa-icon fa-link"></i>{{ _('RDF/XML')}}</a></li>
     <li><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.ttl" class="btn"><i class="fa fa-icon fa-link"></i>{{ _('Turtle')}}</a></li>
     <li><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.n3" class="btn"><i class="fa fa-icon fa-link"></i>{{ _('Notation3')}}</a></li>
