--- a/ckanext/cioos_theme/templates/package/search.html
+++ b/ckanext/cioos_theme/templates/package/search.html
@@ -24,6 +24,7 @@
           'search': c.search_facets,
           'titles': c.facet_titles,
           'translated_fields': c.translated_fields,
+          'extras': c.search_extras,
           'remove_field': c.remove_field }
         %}
         {% set sorting = [
@@ -76,6 +77,7 @@
 <div class="filters">
   <div>
     {% snippet "spatial/snippets/spatial_query.html" , default_extent= h.spatial_default_extent() %}
+    {% snippet "snippets/daterange.html" %}
     {% for facet in c.facet_titles %}
       {{ h.snippet('snippets/facet_list.html', title=c.facet_titles[facet], name=facet) }}
     {% endfor %}
