add keep empty value

--- a/ckanext/cioos_theme/templates/snippets/daterange.html
+++ b/ckanext/cioos_theme/templates/snippets/daterange.html
@@ -12,7 +12,8 @@
             data-date-clear-btn="true"
             data-date-min-view-mode="2"
             data-date-autoclose="true"
-            data-date-end-date="+0d">
+            data-date-end-date="+0d"
+            data-date-keep-empty-values="true">
          <input type='text' id='datepickerbegin' class="form-control datepicker"/>
          <div class="input-group-addon">to</div>
          <input type='text' id='datepickerend' class="form-control datepicker" />
