--- a/ckanext/cioos_theme/templates/package/search.html
+++ b/ckanext/cioos_theme/templates/package/search.html
@@ -5,7 +5,7 @@
 {% block subtitle %}{{ _("Datasets") }}{% endblock %}
 
 {% block breadcrumb_content %}
-  <li class="active">{% link_for _('Datasets'), named_route=dataset_type + '_search' %}</li>
+  <li class="active">{% link_for _(dataset_type.title() + 's'), named_route=dataset_type + '_search' %}</li>
 {% endblock %}
 
 {% block primary_content %}
