update eov list to filter replaced fields and add pac icons

--- a/ckanext/cioos_theme/templates/home/layout4.html
+++ b/ckanext/cioos_theme/templates/home/layout4.html
@@ -19,7 +19,7 @@
         <div class="module-content box">
           {% block eov_list %}
           {% set eov = h.cioos_get_eovs(show_all=True) %}
-          {% for grouper, list in eov|selectattr('active', 'undefined')|groupby('category') %}
+          {% for grouper, list in eov|rejectattr('category', 'undefined')|groupby('category') %}
           {% if grouper and grouper not in g.exclude_eov_category %}
           <h4>{{ _(grouper) }}</h4>
           <ul class="media-grid" data-module="media-grid">
