--- a/ckanext/cioos_theme/templates/schemamap.html
+++ b/ckanext/cioos_theme/templates/schemamap.html
@@ -42,7 +42,10 @@
     }
     #schemamap td span.required{
       font-weight: bold;
+      font-size: x-large;
       color: darkred;
+      text-align: center;
+      display: block;
     }
 
   </style>
