add checkbox to show null date ranges and hide null date ranges by default when doing a date range search

--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1197,4 +1197,19 @@ i.fa.translation_icon {
   }
 }
 
+.secondary{
+  #datepickernullrange {
+    margin: 10px 0px 10px 15px;
+  }
+
+  #datepickernullrangelabel:after {
+    content: "";
+  }
+
+  .identifier_icon_list{
+    width: 14px;
+  }
+
+}
+
 @import url(//fonts.googleapis.com/css?family=Montserrat:400,600,700,800,900|Quicksand:300,400,600,700|PT+Sans:400|Raleway:400);
