--- a/ckanext/cioos_theme/templates/snippets/daterange.html
+++ b/ckanext/cioos_theme/templates/snippets/daterange.html
@@ -18,6 +18,8 @@
          <div class="input-group-addon">to</div>
          <input type='text' id='datepickerend' class="form-control datepicker" />
       </div>
+      <input class="form-check-input module-content" type="checkbox" value="true" id="datepickernullrange">
+      <label id="datepickernullrangelabel" for="datepickernullrange">Show blank range</label>
     </div>
 </section>
 
