--- a/ckanext/cioos_theme/templates/snippets/search_form.html
+++ b/ckanext/cioos_theme/templates/snippets/search_form.html
@@ -91,7 +91,7 @@
             {% else %}
              <i class="fa fa-asterisk"></i>
             {% endif %}
-              <a href="{{ facets.remove_field(['ext_year_begin','ext_year_end'] ) }}" class="remove" title="{{ _('Remove') }}"><i class="fa fa-times"></i></a>
+              <a href="{{ facets.remove_field(['ext_year_begin','ext_year_end','ext_show_empty_range'] ) }}" class="remove" title="{{ _('Remove') }}"><i class="fa fa-times"></i></a>
             </span>
         {% endif %}
         {% endif %}
