make adjustments to the look and feel of the dataset read page. - truncate description and add a "read more" link - load page with date, metadata source, and additional info sections collapsed and move them to end of page. - move format links to side bar - adjust how resources are displayed and make whole resource row clickable

--- a/ckanext/cioos_theme/templates/package/snippets/dates.html
+++ b/ckanext/cioos_theme/templates/package/snippets/dates.html
@@ -1,6 +1,8 @@
 <section class="dates">
-  <h3>{{ _('Dates') }}</h3>
-  <table class="table table-bordered table-condensed">
+  <h3><a class="section_hide_controle collapsed" data-toggle="collapse" href="#dates_table" role="button" aria-expanded="false" aria-controls="dates_table">
+  {{ _('Dates') }}<i class="fa"></i>
+  </a></h3>
+  <table id="dates_table" class="table table-bordered table-condensed collapse">
     <tbody>
       {% block package_dates %}
 
