--- a/ckanext/cioos_theme/public/cioos_theme.scss
+++ b/ckanext/cioos_theme/public/cioos_theme.scss
@@ -1,5 +1,5 @@
 $defaultfont: Raleway, Helvetica, Arial;
-$headlinefont: "Quicksand", "nimbus-sans", "Arial", sans-serif; //headlines, captions and infoboxes
+$headlinefont: "Montserrat", apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;; //headlines, captions and infoboxes
 $darkestblack: rgba(73, 73, 72, 1); //the darkest black used for font color and body copy
 $lighttextcolor: lighten($darkestblack, 95%); //white text #ffffff
 $navbg: #52a79b; //Dark blue, behind nav area, behind share logos #1c4552
@@ -191,6 +191,16 @@ body {
     //padding-left: 13px;
     //padding-right: 13px;
   }
+}
+
+.main .container {
+    margin: 0 auto;
+    padding: 0 16px;
+}
+
+.main .container .row.wrapper{
+    margin-left: 0px;
+    margin-right: 0px;
 }
 
 /* Main navigation
@@ -802,12 +812,18 @@ div.search-input-group {
 }
 
 #header-container {
+  font-family: $headlinefont;
+  font-weight: 700;
+  font-size: 12.8px;
+  font-style: normal;
+  line-height: 26px;
 
   #header-core
   {
     display: block;
     max-width: 1140px;
     margin: 0 auto;
+    padding: 0 12.8px;
   }
 
   #logo {
@@ -817,8 +833,9 @@ div.search-input-group {
   }
 
   #logo img {
-    width: auto;
-    max-height: 85px;
+    font-size: 1rem;
+    // width: auto;
+    height: 6em;
     vertical-align: middle;
     border: 0;
     transition: all 0.3s ease;
@@ -857,7 +874,6 @@ div.search-input-group {
   }
 
   #header .menu > li {
-    font-size: 14px;
     color: #bebebe;
     padding: 0 0 1em 0;
   }
@@ -870,10 +886,10 @@ div.search-input-group {
     text-decoration: none;
     color: #0a0a0a;
     font-family: inherit;
-    font-weight: 400;
-    font-size: 14px;
-    font-style: normal;
-    line-height: 31px;
+    font-weight: inherit;
+    font-size: inherit;
+    font-style: inherit;
+    line-height: inherit;
     transition: all 0.3s ease;
   }
 
@@ -924,8 +940,12 @@ div.search-input-group {
   }
 
   #header .menu > li > a span,
-  #header .sub-menu > li > a span,
   #header .menu > li.current-menu-item > a span {
+    //color: #58595b;
+    font-weight: 700;
+  }
+
+  #header .sub-menu > li > a span{
     //color: #58595b;
     font-weight: 400;
   }
