--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -69,7 +69,7 @@
     {% snippet "package/snippets/tags.html", tags=h.cioos_load_json(pkg.get('keywords', {}))[h.lang()] %}
   {% endblock %}
 
-  {% set dataset_extent = h.get_pkg_dict_extra(c.pkg_dict, 'spatial') or c.pkg_dict.get('spatial') %}
+  {% set dataset_extent = h.dump_json(h.get_pkg_dict_extra(c.pkg_dict, 'spatial') or c.pkg_dict.get('spatial')) %}
   {% if dataset_extent %}
     {% snippet "spatial/snippets/dataset_map.html", extent=dataset_extent, max_zoom=h.spatial_get_map_initial_max_zoom(pkg) %}
   {% endif %}
@@ -107,6 +107,9 @@
           <li class="nav-item"><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.n3"><span class="item-label">{{ _('Notation3')}}</span></a></li>
           <li class="nav-item"><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.jsonld"><span class="item-label">{{ _('JSON-LD')}}</span></a></li>
         {% endif %}
+          <li><a href="{{ h.url_for(controller='api',
+                              logic_function='package_show',
+                              action='action', ver=3, id=pkg.get('name') or pkg.id) }}" class="btn"><i class="fa fa-icon fa-link"></i>{{ _('JSON')}}</a></li>
           <li class="nav-item"><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}"><span class="item-label">{{ _('Show Permalink')}}</span></a></li>
         </ul>
       </nav>
