-change uri (id) of graphs to use re-creatable id's based on name of datasts and md5 hash of resource name and url. - add basic package view page - only show default language in notes field and remove escaped json

--- a/ckanext/cioos_theme/templates/package/datacite.html
+++ b/ckanext/cioos_theme/templates/package/datacite.html
@@ -1,7 +1,7 @@
 {% extends "page.html" %}
 
 {% set pkg = c.pkg_dict or pkg_dict %}
-{% block subtitle %}{{ _('Schema Map') }}{% endblock %}
+{% block subtitle %}{{ _('DataCite XML') }}{% endblock %}
 {% set dataset_type = dataset_type or pkg.type or 'dataset' %}
 {% set dataset = h.dataset_display_name(pkg) %}
 
