--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -48,6 +48,10 @@
     <li><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.n3" class="btn"><i class="fa fa-icon fa-link"></i>{{ _('Notation3')}}</a></li>
     <li><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.jsonld" class="btn"><i class="fa fa-icon fa-link"></i>{{ _('JSON-LD')}}</a></li>
     {% endif %}
+    <li><a href="{{ h.url_for(controller='api',
+                              logic_function='package_show',
+                              action='action', ver=3, id=pkg.get('name') or pkg.id) }}" class="btn"><i class="fa fa-icon fa-link"></i>{{ _('JSON')}}</a></li>
+    <li><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.basic" class="btn"><i class="fa fa-icon fa-link"></i>{{ _(' Basic View')}}</a></li>                              
     <li><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}" class="btn"><i class="fa fa-icon fa-link"></i>{{ _('Show Permalink')}}</a></li>
     </ul>
 
@@ -83,7 +87,7 @@
     {% snippet "package/snippets/tags.html", tags=h.cioos_load_json(pkg.get('keywords', {}))[h.lang()] %}
   {% endblock %}
 
-  {% set dataset_extent = h.get_pkg_dict_extra(c.pkg_dict, 'spatial') or c.pkg_dict.get('spatial') %}
+  {% set dataset_extent = h.dump_json(h.get_pkg_dict_extra(c.pkg_dict, 'spatial') or c.pkg_dict.get('spatial')) %}
   {% if dataset_extent %}
     {% snippet "spatial/snippets/dataset_map.html", extent=dataset_extent, max_zoom=h.spatial_get_map_initial_max_zoom(pkg) %}
   {% endif %}
