--- a/ckanext/cioos_theme/templates/home/snippets/promoted.html
+++ b/ckanext/cioos_theme/templates/home/snippets/promoted.html
@@ -1,7 +1,7 @@
 {% set intro = h.scheming_language_text(h.cioos_load_json(g.site_intro_text)) %}
 
 <div class="module-content box">
-  <h3 class="heading">{{ _("ABOUT THE METADATA CATALOGUE") }}</h3>
+  <h3 class="heading">{{ _("ABOUT THE ADATA CATALOGUE") }}</h3>
   {% if intro %}
     {{ h.render_markdown(intro) }}
   {% else %}
