Updating primary menu to latest links for CIOOS Atlantic template.

--- a/ckanext/cioos_theme/templates/atlantic_header.html
+++ b/ckanext/cioos_theme/templates/atlantic_header.html
@@ -15,17 +15,12 @@
           <li id="menu-item-2811" class="menu-item"><a href="{{ g.site_home_url }}cioos-atlantic-team/">Meet Our Team</a></li>
           <li id="menu-item-2830" class="menu-item"><a href="{{ g.site_home_url }}our-partners/">Our Partners</a></li>
           <li id="menu-item-1468" class="menu-item"><a href="{{ g.site_home_url }}partnership-profiles/">Partnership Profiles</a></li>
-          <li id="menu-item-1485" class="menu-item"><a href="{{ g.site_home_url }}essential-ocean-variables/">Essential Ocean Variables</a></li>
-          <li id="menu-item-2825" class="menu-item"><a href="{{ g.site_home_url }}data-management/">Data Management</a></li>
-          <li id="menu-item-2833" class="menu-item"><a href="{{ g.site_home_url }}opportunities/">Opportunities</a></li>
+          <li id="menu-item-3443" class="menu-item"><a href="{{ g.site_home_url }}frequently-asked-questions/">Frequently Asked Questions</a></li>
           {%- else -%}
           <li id="menu-item-2821" class="menu-item"><a href="{{ g.site_home_url }}fr/a-propos/">À propos de CIOOS Atlantique</a></li>
           <li id="menu-item-2814" class="menu-item"><a href="{{ g.site_home_url }}fr/equipe-de-siooc-atlantique/">Notre équipe</a></li>
           <li id="menu-item-2851" class="menu-item"><a href="{{ g.site_home_url }}fr/nos-partenaires/">Nos partenaires</a></li>
           <li id="menu-item-2896" class="menu-item"><a href="{{ g.site_home_url }}fr/profils-de-partenariat/">Profils de Partenariat</a></li>
-          <li id="menu-item-1497" class="menu-item"><a href="{{ g.site_home_url }}fr/variables-oceaniques-essentielles/">Variables de base</a></li>
-          <li id="menu-item-2850" class="menu-item"><a href="{{ g.site_home_url }}fr/gestion-des-donnees/">Gestion des données</a></li>
-          <li id="menu-item-2897" class="menu-item"><a href="{{ g.site_home_url }}fr/opportunites/">Opportunités</a></li>
           {%- endif -%}
         </ul>
       </li>
@@ -46,6 +41,9 @@
       </li>
       <li id="menu-item-2002" class="menu-item menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}resources/"><span>Resources</span></a>
         <ul class="sub-menu">
+          <li id="menu-item-2836" class="menu-item"><a href="{{ g.site_home_url }}contribute-to-cioos-atlantic/">Contribute to CIOOS Atlantic</a></li>
+          <li id="menu-item-2825" class="menu-item"><a href="{{ g.site_home_url }}data-management/">Data Management</a></li>
+          <li id="menu-item-1485" class="menu-item"><a href="{{ g.site_home_url }}essential-ocean-variables/">Essential Ocean Variables</a></li>
           <li id="menu-item-1511" class="menu-item"><a href="{{ g.site_home_url }}resources/">Resources</a></li>
           <li id="menu-item-2836" class="menu-item"><a href="{{ g.site_home_url }}webinars-and-discussions/">Webinars and Discussions</a></li>
         </ul>
@@ -67,6 +65,8 @@
       </li>
       <li id="menu-item-2002" class="menu-item menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}fr/ressources/"><span>Ressources</span></a>
         <ul class="sub-menu">
+          <li id="menu-item-2850" class="menu-item"><a href="{{ g.site_home_url }}fr/gestion-des-donnees/">Gestion des données</a></li>
+          <li id="menu-item-1497" class="menu-item"><a href="{{ g.site_home_url }}fr/variables-oceaniques-essentielles/">Variables de base</a></li>
           <li id="menu-item-2853" class="menu-item"><a href="{{ g.site_home_url }}fr/ressources/">Ressources</a></li>
           <li id="menu-item-2881" class="menu-item"><a href="{{ g.site_home_url }}fr/webinaires-et-discussions/">Webinaires et Discussions</a></li>
         </ul>
@@ -104,17 +104,12 @@
         <li id="menu-item-2811" class="menu-item"><a href="{{ g.site_home_url }}cioos-atlantic-team/">Meet Our Team</a></li>
         <li id="menu-item-2830" class="menu-item"><a href="{{ g.site_home_url }}our-partners/">Our Partners</a></li>
         <li id="menu-item-1468" class="menu-item"><a href="{{ g.site_home_url }}partnership-profiles/">Partnership Profiles</a></li>
-        <li id="menu-item-1485" class="menu-item"><a href="{{ g.site_home_url }}essential-ocean-variables/">Essential Ocean Variables</a></li>
-        <li id="menu-item-2825" class="menu-item"><a href="{{ g.site_home_url }}data-management/">Data Management</a></li>
-        <li id="menu-item-2833" class="menu-item"><a href="{{ g.site_home_url }}opportunities/">Opportunities</a></li>
+        <li id="menu-item-3443" class="menu-item"><a href="{{ g.site_home_url }}frequently-asked-questions/">Frequently Asked Questions</a></li>
         {%- else -%}
         <li id="menu-item-2821" class="menu-item"><a href="{{ g.site_home_url }}fr/a-propos/">À propos de CIOOS Atlantique</a></li>
         <li id="menu-item-2814" class="menu-item"><a href="{{ g.site_home_url }}fr/equipe-de-siooc-atlantique/">Notre équipe</a></li>
         <li id="menu-item-2851" class="menu-item"><a href="{{ g.site_home_url }}fr/nos-partenaires/">Nos partenaires</a></li>
         <li id="menu-item-2896" class="menu-item"><a href="{{ g.site_home_url }}fr/profils-de-partenariat/">Profils de Partenariat</a></li>
-        <li id="menu-item-1497" class="menu-item"><a href="{{ g.site_home_url }}fr/variables-oceaniques-essentielles/">Variables de base</a></li>
-        <li id="menu-item-2850" class="menu-item"><a href="{{ g.site_home_url }}fr/gestion-des-donnees/">Gestion des données</a></li>
-        <li id="menu-item-2897" class="menu-item"><a href="{{ g.site_home_url }}fr/opportunites/">Opportunités</a></li>
         {%- endif -%}
       </ul>
     </li>
@@ -135,6 +130,9 @@
     </li>
     <li id="menu-item-2002" class="menu-item menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}resources/"><span class="mega-indicator">Resources</span></a>
       <ul class="sub-menu">
+        <li id="menu-item-2836" class="menu-item"><a href="{{ g.site_home_url }}contribute-to-cioos-atlantic/">Contribute to CIOOS Atlantic</a></li>
+        <li id="menu-item-2825" class="menu-item"><a href="{{ g.site_home_url }}data-management/">Data Management</a></li>
+        <li id="menu-item-1485" class="menu-item"><a href="{{ g.site_home_url }}essential-ocean-variables/">Essential Ocean Variables</a></li>
         <li id="menu-item-1511" class="menu-item"><a href="{{ g.site_home_url }}resources/">Resources</a></li>
         <li id="menu-item-2836" class="menu-item"><a href="{{ g.site_home_url }}webinars-and-discussions/">Webinars and Discussions</a></li>
       </ul>
@@ -156,6 +154,8 @@
     </li>
     <li id="menu-item-2002" class="menu-item menu-item-has-children menu-parent"><a href="{{ g.site_home_url }}fr/ressources/"><span class="mega-indicator">Ressources</span></a>
       <ul class="sub-menu">
+        <li id="menu-item-2850" class="menu-item"><a href="{{ g.site_home_url }}fr/gestion-des-donnees/">Gestion des données</a></li>
+        <li id="menu-item-1497" class="menu-item"><a href="{{ g.site_home_url }}fr/variables-oceaniques-essentielles/">Variables de base</a></li>
         <li id="menu-item-2853" class="menu-item"><a href="{{ g.site_home_url }}fr/ressources/">Ressources</a></li>
         <li id="menu-item-2881" class="menu-item"><a href="{{ g.site_home_url }}fr/webinaires-et-discussions/">Webinaires et Discussions</a></li>
       </ul>
