--- a/ckanext/cioos_theme/templates/package/read.html
+++ b/ckanext/cioos_theme/templates/package/read.html
@@ -92,7 +92,7 @@
 
       {% set field = h.scheming_field_by_name(schema.dataset_fields, 'cited-responsible-party') %}
       {% set cpkg = pkg.copy() %}
-      {%- set _ = cpkg.update({"cited-responsible-party": h.cioos_group_contacts(cpkg.get('cited-responsible-party') + cpkg.get('metadata-point-of-contact') + cpkg.get('distributor'))}) -%}
+      {%- set _ = cpkg.update({"cited-responsible-party": h.cioos_group_contacts(cpkg.get('cited-responsible-party',[]) + cpkg.get('metadata-point-of-contact',[]) + cpkg.get('distributor',[]))}) -%}
       {%- snippet "scheming/display_snippets/repeating_subfields.html",
         field=field,
         data=cpkg,
@@ -133,7 +133,7 @@
           <li class="nav-item"><a href="{{ h.url_for(controller='api',
                               logic_function='package_show',
                               action='action', ver=3, id=pkg.get('name') or pkg.id) }}"><span class="item-label">{{ _('JSON')}}</span></a></li>
-          <li><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.basic" class="btn"><i class="fa fa-icon fa-link"></i>{{ _(' Basic View')}}</a></li>   
+          <li class="nav-item"><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}.basic"><span class="item-label">{{ _(' Basic View')}}</span></a></li>
           <li class="nav-item"><a href="{{ h.url_for(controller='dataset', action='read', id=pkg.get('name') or pkg.id) }}"><span class="item-label">{{ _('Show Permalink')}}</span></a></li>
         </ul>
       </nav>
