--- a/ckanext/cioos_theme/templates/package/snippets/resources_list.html
+++ b/ckanext/cioos_theme/templates/package/snippets/resources_list.html
@@ -14,7 +14,7 @@ Example:
   <h3>{{ _('Data and Resources') }}</h3>
   {% block resource_list %}
     {% if resources %}
-      <div class="list-group container {% block resource_list_class %}resource-list{% endblock %}">
+      <div class="list-group row {% block resource_list_class %}resource-list{% endblock %}">
         {% block resource_list_inner %}
           {% set can_edit = h.check_access('package_update', {'id':pkg.id }) and not is_activity_archive %}
           {% for resource in resources %}
