--- a/ckanext/cioos_theme/templates/package/snippets/datacite_xml.html
+++ b/ckanext/cioos_theme/templates/package/snippets/datacite_xml.html
@@ -7,10 +7,17 @@
     {% for party in h.cioos_load_json(pkg['cited-responsible-party']) %}
       {%- if party['individual-name'] -%}
       <creator>
-        {% set names = party['individual-name'].split(' ') -%}
-        <creatorName nameType="Personal">{{ names[-1], ' '.join(names[:-1]) }}</creatorName>
-        <givenName>{{ ' '.join(names[:-1]) }}</givenName>
-        <familyName>{{ names[-1] }}</familyName>
+        {%- if ',' in party['individual-name'] -%}
+          {% set names = party['individual-name'].split(',') -%}
+          <creatorName nameType="Personal">{{ party['individual-name'] }}</creatorName>
+          <givenName>{{ names[1].strip() }}</givenName>
+          <familyName>{{ names[0] }}</familyName>
+        {% else %}
+          {% set names = party['individual-name'].split(' ') -%}
+          <creatorName nameType="Personal">{{ names[-1], ' '.join(names[:-1]) }}</creatorName>
+          <givenName>{{ ' '.join(names[:-1]) }}</givenName>
+          <familyName>{{ names[-1] }}</familyName>
+        {% endif %}
         {% if party['organisation-name'] -%}
         <affiliation>{{party['organisation-name']}}</affiliation>
         {%- endif %}
@@ -46,7 +53,12 @@
   <contributors>
     {%- for party in h.cioos_load_json(pkg['distributor']) %}
     <contributor contributorType="{{party['role'][0]|title}}">
-      {%- if party['individual-name'] -%}
+      {%- if ',' in party['individual-name'] -%}
+        {% set names = party['individual-name'].split(',') -%}
+        <creatorName nameType="Personal">{{ party['individual-name'] }}</creatorName>
+        <givenName>{{ names[1].strip() }}</givenName>
+        <familyName>{{ names[0] }}</familyName>
+      {% elif party['individual-name'] -%}
         {% set names = party['individual-name'].split(' ') -%}
       {% else %}
         {% set names = party['organisation-name'].split(' ') -%}
@@ -65,7 +77,7 @@
   <language>{{ pkg['metadata-language'] }}</language>
   <resourceType resourceTypeGeneral="{{ pkg['resource-type'].title() }}">{{ pkg['resource-type'].title() }}</resourceType>
   <version>{{pkg['version'] or '1.0' }}</version>
-  {%- if pkg['license_url'] and  pkg['license_title'] %}
+  {%- if pkg['license_url'] and pkg['license_title'] %}
   <rightsList>
     <rights xml:lang="en-US" rightsURI="{{ pkg['license_url'] }}">{{ pkg['license_title'] }}</rights>
   </rightsList>
@@ -88,7 +100,7 @@
         <northBoundLatitude>{{pkg['bbox-north-lat']}}</northBoundLatitude>
       </geoLocationBox>
       {% set spatial = h.cioos_load_json(pkg['spatial']) %}
-      {%- if  spatial and spatial['type'] == 'Polygon' %}
+      {%- if spatial and spatial['type'] == 'Polygon' %}
       <geoLocationPolygon>
         {%- for coord in spatial['coordinates'][0] %}
         <polygonPoint>
