--- a/ckanext/cioos_theme/templates/package/snippets/datacite_xml.html
+++ b/ckanext/cioos_theme/templates/package/snippets/datacite_xml.html
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <resource xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://datacite.org/schema/kernel-4" xsi:schemaLocation="http://datacite.org/schema/kernel-4 http://schema.datacite.org/meta/kernel-4.1/metadata.xsd">
-  {% if doi -%}
-  <identifier identifierType="DOI">10.5072/example-full</identifier>
+  {% if "doi" in pkg.get('unique-resource-identifier-full',{}).get('code') or "code" in pkg.get('unique-resource-identifier-full',{}).get('code')-%}
+  <identifier identifierType="DOI">{{ pkg.get('unique-resource-identifier-full',{}).get('code') }}</identifier>
   {%- endif -%}
   <creators>
     {% for party in h.cioos_load_json(pkg['cited-responsible-party']) %}
@@ -14,8 +14,8 @@
           <familyName>{{ names[0] }}</familyName>
         {% else %}
           {% set names = party['individual-name'].split(' ') -%}
-          <creatorName nameType="Personal">{{ names[-1], ' '.join(names[:-1]) }}</creatorName>
-          <givenName>{{ ' '.join(names[:-1]) }}</givenName>
+          <creatorName nameType="Personal">{{ names[-1] }} {%- if names[:-1] -%}, {{' '.join(names[:-1])}} {%- endif %}</creatorName>
+          <givenName>{{ ' '.join(names[:-1]) or names[0] }}</givenName>
           <familyName>{{ names[-1] }}</familyName>
         {% endif %}
         {% if party['organisation-name'] -%}
@@ -26,25 +26,28 @@
     {%- endfor -%}
   </creators>
   <titles>
-    <title xml:lang="en">{{ pkg['title_translated']['en'] }}</title>
-    <title xml:lang="fr">{{ pkg['title_translated']['fr'] }}</title>
+    <title xml:lang="en">{{ pkg['title_translated']['en'] or pkg['title_translated'] }}</title>
+    <title xml:lang="fr">{{ pkg['title_translated']['fr'] or pkg['title_translated'] }}</title>
   </titles>
   {%- for party in h.cioos_load_json(pkg['cited-responsible-party']) -%}
-    {% if 'publisher' in party['role'] %}
+    {% if 'publisher' in party['role'] or 'role' in party['role']%}
   <publisher>{{ party['organisation-name'] or party['individual-name'] }}</publisher>
     {% endif %}
   {%- endfor -%}
 
   {%- for date in h.cioos_load_json(pkg['dataset-reference-date']) -%}
-    {% if date['type'] == 'publication' %}
+    {% if 'publication' in date['type'] %}
   <publicationYear>{{ date['value'][0:4] }}</publicationYear>
+    {% elif 'type' in date['type'] %}
+    {# the elif is to populate template for schemamap #}
+  <publicationYear>{{ date['value'] }}</publicationYear>
     {% endif %}
   {%- endfor -%}
   <subjects>
-    {%- for kw in pkg['keywords']['en'] %}
+    {%- for kw in pkg['keywords']['en'] or pkg['keywords'] %}
     <subject xml:lang="en">{{ kw }}</subject>
     {%- endfor %}
-    {%- for kw in pkg['keywords']['fr'] %}
+    {%- for kw in pkg['keywords']['fr'] or pkg['keywords'] %}
     <subject xml:lang="fr">{{ kw }}</subject>
     {%- endfor %}
   </subjects>
@@ -63,8 +66,8 @@
       {% else %}
         {% set names = party['organisation-name'].split(' ') -%}
       {%- endif %}
-      <contributorName>{{ names[-1], ' '.join(names[:-1]) }}</contributorName>
-      <givenName>{{ ' '.join(names[:-1]) }}</givenName>
+      <contributorName>{{ names[-1] }} {%- if names[:-1] -%}, {{' '.join(names[:-1])}} {%- endif %}</contributorName>
+      <givenName>{{ ' '.join(names[:-1]) or names[0] }}</givenName>
       <familyName>{{ names[-1] }}</familyName>
       {% if party['organisation-name'] and party['individual-name']-%}
       <affiliation>{{party['organisation-name']}}</affiliation>
@@ -84,10 +87,10 @@
   {% endif -%}
   <descriptions>
     <description xml:lang="en" descriptionType="Abstract">
-      {{ pkg['notes_translated']['en'] }}
+      {{- pkg['notes_translated']['en'] or pkg['notes_translated'] -}}
     </description>
     <description xml:lang="fr" descriptionType="Abstract">
-      {{ pkg['notes_translated']['fr'] }}
+      {{- pkg['notes_translated']['fr'] or pkg['notes_translated'] -}}
     </description>
   </descriptions>
 
