re-order columns, make schema map page wider

--- a/ckanext/cioos_theme/templates/schemamap.html
+++ b/ckanext/cioos_theme/templates/schemamap.html
@@ -66,3 +66,9 @@
 {% endblock %}
 
 {% block secondary %}{% endblock %}
+
+{%- block content %}
+<div id="schemamap">
+{{ super() }}
+</div>
+{% endblock -%}
